--- a/templates/model-footer.html
+++ b/templates/model-footer.html
@@ -1,11 +1,12 @@
 
-<div class="containers-xl">
+
+
+
     <section>
 		<div class="card border-0 p-3 mb-2 bg-dark text-light" align="center">
 		    <h6>Copyright 2017 System</h6>
-			<div class="text-light">
+			<div class="text-light" align="right">
 				<p>Desenvolvido por: Rosivaldo de Jesus</p>
 			</div>
 		</div>
 	<section>
-</div>
