--- a/templates/model-header.html
+++ b/templates/model-header.html
@@ -12,6 +12,9 @@
             <a class="nav-link active text-light" aria-current="page" href="/clientes/" >Clientes</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active text-light" aria-current="page" href="/documentacao/" >Documentação</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link text-light" href="/forum/">Fórum</a>
           </li>
           <li class="nav-item dropdown">
