Correção detalhes de equipamentos

--- a/apps/clientes/templates/clientes/cliente_detail.html
+++ b/apps/clientes/templates/clientes/cliente_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Detalhes do cliente {% endblock %}
+{% block title %} {{ object.nome }} {% endblock %}
 
 {% block main %}
     <br><br>
