--- a/apps/clientes/templates/equipamentos-detalhes.html
+++ b/apps/clientes/templates/equipamentos-detalhes.html
@@ -4,7 +4,13 @@
 
 {% block main %}
 
-Nome do equipamento: {{ detalhe.equipamentoNome }}
+Nome do equipamento: {{ detalhe.equipamentoNome }}<br>
+Login: {{ detalhe.equipamentoNome }}<br>
+Senha: {{ detalhe.equipamentoNome }}<br>
+Localização: {{ detalhe.equipamentoNome }}<br>
+Texto: {{ detalhe.equipamentoNome }}<br>
+Sistema: {{ detalhe.equipamentoNome }}<br>
+
 
 
 {% endblock %}
