--- a/apps/clientes/templates/equipamentos.html
+++ b/apps/clientes/templates/equipamentos.html
@@ -14,7 +14,7 @@
                 <th>Blá</th>
                 <th>Blá</th>
                 <th>Blá</th>
-                <th>Blá</th>
+                <th>Bl</th>
             </tr>
          </thead>
          <tbody>
@@ -27,7 +27,7 @@
                 <td>{{ equip.equipamentoTexto }}</td>
                 <td>{{ equip.equipamentoSistema }}</td>
                 <td>
-                    <a href="equipamentos-detalhes/?id={{ equip.id}}">
+                    <a href="{% url 'equipamento-detalhes' equip.id %}">
                         <i class="fas fa-eye text-lg-info" style='font-size:30px'></i>
                     </a>
                 </td>
@@ -35,6 +35,7 @@
             {% endfor %}
          </tbody>
      </table>
+
  </div>
 
 {% endblock %}
