Adicão de manuais

--- a/apps/clientes/templates/clientes/equipamentoscliente_detail.html
+++ b/apps/clientes/templates/clientes/equipamentoscliente_detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
+{% load static %}
 
-{% block title %} Detalhes dos equipamentos {% endblock %}
+{% block title %} :: Detalhes dos equipamentos {% endblock %}
 
 {% block main %}
 
