--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -12,7 +12,7 @@
     </section>
 
     <section>
-        <div class="text-light">
+        <div class="text-dark">
             Exemplo de texto
         </div>
     </section>
