--- a/templates/model-footer.html
+++ b/templates/model-footer.html
@@ -1,6 +1,27 @@
+
+
+<div class="card border-0 p-3 mb-2 bg-dark text-light" align="center">
+	<div class="row">
+	  <div class="col-md-4">Contatos</div>
+	  <div class="col-md-4">
+		  <h6>Copyright 2017 System</h6>
+	  </div>
+	  <div class="col-md-4">
+		  Redes Sociais <br><br>
+
+
+		  <h6>Desenvolvido por:</h6>
+		  <p>Rosivaldo de Jesus</p>
+	  </div>
+	</div>
+</div>
+
+
+<!--
 	<div class="card border-0 p-3 mb-2 bg-dark text-light" align="center">
 	    <h6>Copyright 2017 System</h6>
 		<div class="text-light" align="right">
 			<p>Desenvolvido por: Rosivaldo de Jesus</p>
 		</div>
 	</div>
+-->
