--- a/apps/clientes/templates/clientes/equipamentos.html
+++ b/apps/clientes/templates/clientes/equipamentos.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
+{% load static %}
 
-{% block title %} Equipamentos {% endblock %}
+{% block title %} :: Equipamentos {% endblock %}
 
 {% block main %}
 
