--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,7 @@
 <html lang="pt-br">
 <head>
 
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
-
+    <link rel="stylesheet" href="{% static '/css/style.css' %}">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -19,11 +18,16 @@
 
     {% include "model-header.html" %}
 
+
+
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %}</title>
 </head>
     <body>
      <div class="container">
+
+         {% block header-bottom %} {% endblock %}
+
     {% block main %} {% endblock %}
      </div>
 
