--- a/templates/model-header.html
+++ b/templates/model-header.html
@@ -1,3 +1,4 @@
+<div class="card border-0 p-3 mb-2 bg-dark text-light" align="center">
 
  <div class="container">
   <nav class="navbar navbar-expand-lg navbar-light bg-dark">
@@ -16,6 +17,12 @@
           </li>
           <li class="nav-item">
             <a class="nav-link text-light" href="/forum/">Fórum</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="/senhas-padrao/">Senhas Padrão</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="/manuais/">Manuais</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -40,3 +47,5 @@
     </div>
   </nav>
  </div>
+</div>
+
