--- a/apps/clientes/templates/clientes/cliente_form.html
+++ b/apps/clientes/templates/clientes/cliente_form.html
@@ -1,10 +1,19 @@
+<!-- Extendendo os arquivos de base -->
 {% extends 'base.html' %}
+
+<!-- Carregar os arquivos estáticos -->
 {% load static %}
+
+<!-- Bloco contendo a biblioteca Crispy forms -->
 {% load crispy_forms_tags %}
 
-    {% block main %}
-        <form method="post">{% csrf_token %}
-            {{ form | crispy }}
-            <button type="submit" class="btn btn-primary"> Salvar </button>
-        </form>
-    {% endblock %}
+<!-- Bloco contendo o  título da página -->
+{% block title %}:: Clientes {% endblock %}
+
+<!-- Bloco principal -->
+{% block main %}
+    <form method="post">{% csrf_token %}
+        {{ form | crispy }}
+        <button type="submit" class="btn btn-primary"> Salvar </button>
+    </form>
+{% endblock %}
