--- a/apps/clientes/templates/equipamentos-detalhes.html
+++ b/apps/clientes/templates/equipamentos-detalhes.html
@@ -1,16 +1,20 @@
+<!-- Extendendo os arquivos de base -->
 {% extends 'base.html' %}
 
+<!-- Carregar os arquivos estáticos -->
+{% load static %}
+
+<!-- Bloco contendo o  título da página -->
 {% block title %} Detalhes dos equipamentos {% endblock %}
 
+<!-- Bloco principal -->
 {% block main %}
-
-Nome do equipamento: {{ detalhe.equipamentoNome }}<br>
-Login: {{ detalhe.equipamentoNome }}<br>
-Senha: {{ detalhe.equipamentoNome }}<br>
-Localização: {{ detalhe.equipamentoNome }}<br>
-Texto: {{ detalhe.equipamentoNome }}<br>
-Sistema: {{ detalhe.equipamentoNome }}<br>
-
-
-
+    <div>
+        Nome do equipamento: {{ detalhe.equipamentoNome }}<br>
+        Login: {{ detalhe.equipamentoNome }}<br>
+        Senha: {{ detalhe.equipamentoNome }}<br>
+        Localização: {{ detalhe.equipamentoNome }}<br>
+        Texto: {{ detalhe.equipamentoNome }}<br>
+        Sistema: {{ detalhe.equipamentoNome }}<br>
+    </div>
 {% endblock %}
