--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -1,11 +1,14 @@
-{% extends "base.html" %}
+<!-- Extendendo os arquivos de base -->
+{% extends 'base.html' %}
+
+<!-- Carregar os arquivos estáticos -->
 {% load static %}
 
-{% block title %} Página Incial {% endblock %}
+<!-- Bloco contendo o  título da página -->
+{% block title %} :: Home Page {% endblock %}
+
+<!-- Bloco principal -->
 {% block main %}
-
-
-
 <div class="container-xl">
     <section>
         <h2>Sejam Bem-Vindos!!!</h2>
