--- a/apps/core/templates/core/manuais.html
+++ b/apps/core/templates/core/manuais.html
@@ -1,8 +1,13 @@
+<!-- Extendendo os arquivos de base -->
 {% extends 'base.html' %}
+
+<!-- Carregar os arquivos estáticos -->
 {% load static %}
 
+<!-- Bloco contendo o  título da página -->
 {% block title %} :: Manuais {% endblock %}
 
+<!-- Bloco principal -->
 {% block main %}
     <div class="table-responsive">
         <table class="table">
