--- a/apps/forum/templates/forum/perguntaforum_detail-a.html
+++ b/apps/forum/templates/forum/perguntaforum_detail-a.html
@@ -13,6 +13,10 @@
         {% for resposta in resposta %}
             {{ resposta }}
             <hr><hr>
+            <button>
+                <a href="forum-resposta-pergunta/">Responder</a>
+            </button>
+
             <br>
 
 
