--- a/apps/forum/templates/forum/perguntaforum_list-a.html
+++ b/apps/forum/templates/forum/perguntaforum_list-a.html
@@ -15,7 +15,7 @@
             <div class="card">
               <div class="card-body">
                 <blockquote class="blockquote mb-0">
-                  <a href="teste/?id={{ pergunta.id }}">{{ pergunta.titulo_pergunta }}</a>
+                  <a href="forum-pergunta/?id={{ pergunta.id }}">{{ pergunta.titulo_pergunta }}</a>
                     <br>
                   <a>Resposta: {{ respostasPerguntas }} </a>
                 </blockquote>
