--- a/apps/clientes/templates/clientes/cliente_list.html
+++ b/apps/clientes/templates/clientes/cliente_list.html
@@ -1,8 +1,13 @@
+<!-- Extendendo os arquivos de base -->
 {% extends 'base.html' %}
+
+<!-- Carregar os arquivos estáticos -->
 {% load static %}
 
-{% block title %} Clientes {% endblock%}
+<!-- Bloco contendo o  título da página -->
+{% block title %} :: Clientes {% endblock%}
 
+<!-- Bloco principal -->
 {% block main %}
 <div class="container">
     <!--
@@ -73,6 +78,16 @@
             {% endfor %}
           </tbody>
         </table>
+
+        <div>
+          <button>Loan payment</button>
+          <button>Deposit</button>
+          <button>Withdrawal</button>
+        </div>
+
+
+        <span class="link-blue">inscreva-se</span>
+
     </div>        
 </div>
 {% endblock %}
