--- a/apps/forum/templates/forum/forum-pergunta.html
+++ b/apps/forum/templates/forum/forum-pergunta.html
@@ -11,8 +11,6 @@
 
 <!-- Bloco principal -->
 {% block main%}
-    <form method="post">{% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Save">
-    </form>
+    Aqui
+
 {% endblock %}
