--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,10 @@
 
 <html lang="pt-br">
 <head>
-
-    <link rel="stylesheet" href="{% static '/css/style.css' %}">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 
@@ -14,28 +14,25 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <script src="https://kit.fontawesome.com/3da7fbe518.js" crossorigin="anonymous"></script>
 
+
+<!-- Bloco contendo o menu superior da página -->
     {% include "model-header.html" %}
 
-
-
-    <meta charset="UTF-8">
+<!-- Bloco contendo o título da página -->
     <title>{% block title %} {% endblock %}</title>
 </head>
     <body>
-     <div class="container">
 
-         {% block header-bottom %} {% endblock %}
+         <div class="container">
+    <!-- Incluindo o bloco principal -->
+            {% block main %} {% endblock %}
+         </div>
 
-    {% block main %} {% endblock %}
-     </div>
-
-
-
-         {% include "model-footer.html" %}
-
-
+    <!-- Incluindo o a página de rodápe -->
+        {% include "model-footer.html" %}
     </body>
 
      <!-- Option 1: Bootstrap Bundle with Popper -->
